test_suite/ui/overlapping_flags.stderr
error[E0081]: discriminant value `1` already exists
 --> $DIR/overlapping_flags.rs:6:23
  |
5 |     SomeFlag = 1 << 0,
  |                ------ first use of `1`
6 |     OverlappingFlag = 1 << 0,
  |                       ^^^^^^ enum already has `1`
